<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".views.HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/optionsPadding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rulesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rulesTitleText"
                android:textColor="@color/colorButtonBackground"
                android:textSize="@dimen/buttonTextSize"/>

            <TextView
                android:id="@+id/rulesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonBackground"
                android:layout_marginTop="@dimen/rulesMargin"
                android:text="@string/rulesText"
                android:textSize="@dimen/rulesTextSize"/>
            <TextView
                android:id="@+id/modesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modesTitleText"
                android:layout_marginTop="@dimen/rulesMargin"
                android:textColor="@color/colorButtonBackground"
                android:textSize="@dimen/buttonTextSize"/>

            <TextView
                android:id="@+id/modesMultiTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonBackground"
                android:layout_marginTop="@dimen/rulesMargin"
                android:text="@string/modesMultiText"
                android:textSize="@dimen/rulesTextSize"/>

            <TextView
                android:id="@+id/modesSingleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonBackground"
                android:layout_marginTop="@dimen/rulesMargin"
                android:text="@string/modesSingleText"
                android:textSize="@dimen/rulesTextSize"/>

            <TextView
                android:id="@+id/difficultiesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficultiesTitleText"
                android:layout_marginTop="@dimen/rulesMargin"
                android:textColor="@color/colorButtonBackground"
                android:textSize="@dimen/buttonTextSize"/>

            <TextView
                android:id="@+id/difficultiesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonBackground"
                android:layout_marginTop="@dimen/rulesMargin"
                android:text="@string/difficultiesText"
                android:textSize="@dimen/rulesTextSize"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>