<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".views.OptionsActivity">

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:paddingLeft="@dimen/optionsPadding"
        android:paddingRight="@dimen/optionsPadding"
        android:text="@string/soundSwitchText"
        android:textSize="@dimen/buttonTextSize"
        android:theme="@style/OptionsSwitchStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/boardSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="@dimen/optionsPadding"
        android:paddingRight="@dimen/optionsPadding"
        android:text="@string/boardSwitchText"
        android:textSize="@dimen/buttonTextSize"
        android:theme="@style/OptionsSwitchStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/internalOptionsPadding"
        android:paddingRight="@dimen/optionsPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardSwitch">

        <TextView
            android:id="@+id/singleCardModeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singleCardModeOptions"
            android:textColor="@color/colorButtonBackground"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/vibrationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/vibrationSwitchText"
            android:textSize="@dimen/buttonTextSize"
            android:theme="@style/OptionsSwitchStyle" />

        <Switch
            android:id="@+id/navigationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/navigationSwitchText"
            android:textSize="@dimen/buttonTextSize"
            android:theme="@style/OptionsSwitchStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>