<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".views.LevelActivity">

    <TextView
        android:id="@+id/difficultyLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/difficultyLevelsTitle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/difficultyLevelsTitle"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/veryEasyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/veryEasyButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonbordershadow"
        android:contentDescription="@string/buttonVeryEasyText"
        android:gravity="center"
        android:text="@string/buttonVeryEasyText"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyLevelTextView" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonbordershadow"
        android:contentDescription="@string/buttonEasyText"
        android:gravity="center"
        android:text="@string/buttonEasyText"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mediumButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veryEasyButton" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonbordershadow"
        android:contentDescription="@string/buttonMediumText"
        android:gravity="center"
        android:text="@string/buttonMediumText"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/proButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonbordershadow"
        android:contentDescription="@string/buttonHardText"
        android:gravity="center"
        android:text="@string/buttonHardText"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/easyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    <Button
        android:id="@+id/proButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonbordershadow"
        android:contentDescription="@string/buttonProText"
        android:gravity="center"
        android:text="@string/buttonProText"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardButton" />
</androidx.constraintlayout.widget.ConstraintLayout>